Add follow feed endpoints
